--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "author": "jeremiah",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "nodemon": "^2.0.15"
   }
 }
