--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "author": "jeremiah",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.26.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
