--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^0.26.1",
     "bootstrap": "5.1.3",
+    "concurrently": "^7.1.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
@@ -20,6 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "runBackend": "cd backend/ && nodemon server.js",
+    "concurrently":"concurrently \"yarn runBackend\" \"yarn start\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
