--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.26.1",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
