--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -24,7 +27,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "runBackend": "cd backend/ && nodemon server.js",
-    "concurrently":"concurrently \"yarn runBackend\" \"yarn start\"",
+    "concurrently": "concurrently \"yarn runBackend\" \"yarn start\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
