--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
+    "mongoose-encryption": "^2.1.2",
     "nodemon": "^2.0.16",
     "sass": "^1.52.1"
   }
