--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "author": "jeremiah",
   "license": "MIT",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -15,6 +16,7 @@
     "mongoose": "^6.2.10",
     "mongoose-encryption": "^2.1.2",
     "nodemon": "^2.0.16",
-    "sass": "^1.52.1"
+    "sass": "^1.52.1",
+    "twilio": "^3.78.0"
   }
 }
