--- a/backend/package.json
+++ b/backend/package.json
@@ -9,13 +9,18 @@
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-session": "^1.17.3",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
     "mongoose-encryption": "^2.1.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.18",
+    "path": "^0.12.7",
     "sass": "^1.52.1",
     "twilio": "^3.78.0"
   }
