--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.26.1",
+    "body-parser": "^1.20.0",
     "bootstrap": "5.1.3",
     "concurrently": "^7.1.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "md5": "^2.3.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-cookie": "^4.1.1",
